--- a/logging.yaml
+++ b/logging.yaml
@@ -29,6 +29,15 @@ handlers:
         backupCount: 3
         encoding: utf8
 
+    excluded_handler:
+        class: logging.handlers.RotatingFileHandler
+        level: WARN
+        formatter: default
+        filename: logs/spider-excluded_urls.log
+        maxBytes: 10485760 # 10MB
+        backupCount: 3
+        encoding: utf8
+
     errors_handler:
         class: logging.handlers.RotatingFileHandler
         level: WARN
@@ -60,7 +69,7 @@ loggers:
         level: WARN
         handlers: [content_type_handler]
         propagate: False
-    aijinmlplatform.core.util.exec_func_time_log:
-        level: INFO
-        handlers: [console, exec_func_time_log_handler]
+    spider.excluded.urls:
+        level: WARN
+        handlers: [excluded_handler]
         propagate: False
